# pkg/models/detection.go
@@ -22,13 +22,14 @@ type Detection struct {
 }
 
 type DetectionRecord struct {
-	ID         int64             `json:"id"`
-	Source     string            `json:"source"`
-	SourceID   string            `json:"source_id"`
-	ProfileID  int64             `json:"profile_id"`
-	IsRelevant bool              `json:"is_relevant"`
-	Properties map[string]string `json:"properties"`
-	CreatedAt  time.Time         `json:"created_at"`
+	ID              int64             `json:"id"`
+	Source          string            `json:"source"`
+	SourceID        string            `json:"source_id"`
+	ProfileID       int64             `json:"profile_id"`
+	SettingsVersion int64             `json:"settings_version"`
+	IsRelevant      bool              `json:"is_relevant"`
+	Properties      map[string]string `json:"properties"`
+	CreatedAt       time.Time         `json:"created_at"`
 }
 
 type DetectionTags struct {
@@ -50,16 +51,26 @@ type DetectionQuery struct {
 }
 
 type DetectionFilter struct {
-	// ProfileIDs is a list of profile ids to filter by.
+	// Profiles is a list of profile ids to filter by.
 	//
-	// Example: [123, 456]
-	ProfileIDs *[]int64
+	// Example: [{profile_id: 123, source_versions: {reddit: 1}}]
+	Profiles *[]ProfileFilter
 	// Sources is a list of sources to filter by.
 	//
 	// Example: ["reddit", "linkedin"]
 	Sources    *[]string
 	IsRelevant *bool
 	Tags       DetectionTagsFilter
+}
+
+type ProfileFilter struct {
+	ProfileID              int64
+	SourceSettingsVersions []SourceSettingsVersionsFilter
+}
+
+type SourceSettingsVersionsFilter struct {
+	Source   *string
+	Versions []int64
 }
 
 type DetectionTagsFilter struct {
